feat!: pick unit options by id
